# microsoft-todo-api

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/auth/: router.py  schemas.py  service.py
app/core/: config.py
app/db/: config.py  models.py  repository.py
app/db/migrations/: env.py
app/db/migrations/versions/: 6c3a3292f1a8_init.py
app/shared/: depends.py  schemas.py  utils.py
app/shared/resources/: strings.py
app/task_groups/: model.py  repository.py  router.py  schemas.py
app/tasks/: model.py  repository.py  router.py  schemas.py
app/users/: model.py  repository.py  router.py  schemas.py
